# Paradox-SVG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  c-cpp.yml  library.cmake  makefile
.github/workflows/: c-c++.yml
api/c/: CMakeLists.txt  css-lexer.c  css-parser.c  css-tracer.c  parser.c  xml-parser.c
api/c/include/paradox-css/: lexer.h  parser.h  token.h  tracer.h
api/c/include/paradox-svg/: defines.h  parser.h
api/c/include/paradox-xml/: parser.h  tracer.h
api/c/paradox-css/include/paradox-css/: css2_lexer.h  css2_parser.h  css2_token.h  css2_tracer.h  defines.h  lexer.h  parser.h  token.h  tracer.h
api/c/paradox-css/src/: lexer.c  parser.c  token.c  tracer.c
api/c/paradox-css/tests/: unit_testing.c
api/c/paradox-svg/include/paradox-svg/: parser.h  tracer.h
api/c/paradox-svg/src/: parser.c
api/c/paradox-xml/include/paradox-xml/: defines.h  parser.h  tracer.h
api/c/paradox-xml/src/: parser.c
api/c/src/: css-lexer.c  css-parser.c  css-token.c  css-tracer.c  svg-parser.c
api/cpp/: CMakeLists.txt  css-lexer.cpp  css-parser.cpp  parser.cpp  svg-parser.cpp  xml-parser.cpp
api/cpp/include/paradox-css/: lexer.hpp  parser.hpp  tracer.hpp
api/cpp/include/paradox-svg/: defines.hpp  parser.hpp  tracer.hpp
api/cpp/include/paradox-xml/: parser.hpp  tracer.hpp
api/cpp/paradox-css/include/paradox-css/: defines.hpp  lexer.hpp  parser.hpp  tracer.hpp
api/cpp/paradox-css/src/: lexer.cpp  parser.cpp
api/cpp/paradox-svg/include/paradox-svg/: parser.hpp
api/cpp/paradox-svg/src/: parser.cpp
api/cpp/paradox-xml/include/paradox-xml/: defines.hpp  parser.hpp  tracer.hpp
api/cpp/paradox-xml/src/: parser.cpp
api/tests/assets/: example1.css
cmake/: googletest.cmake  paradox-platform.cmake  unity.cmake
config/: macintosh-build.sh  windows-build.bat
config/make/: build-commands.mk  common.mk  operating-system.mk
source/c/: parser.c
source/c/include/paradox-svg/: parser.h
source/swift/: CMakeLists.txt
tests/: c++_tests.makefile  c_tests.makefile  tests.c  tests.cpp
tests/c/: CMakeLists.txt  makefile  unit_tests.c
tests/c++/: CMakeLists.txt  makefile
tests/cpp/: CMakeLists.txt
tests/swift/: CMakeLists.txt  makefile
