cmake_minimum_required(VERSION 3.14)

# Use this variable to make the cmakefile once during the call.
set(PARADOX_SVG_FRAMEWORK_BUILD CACHE INTERNAL ON PARENT_SCOPE)
set(PROJECT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/.")

option(PARADOX_SVG_BUILD_TESTS "Build the test executables" OFF)

if(UNIX AND NOT APPLE)
    set(LINUX TRUE)
endif()

if(APPLE)
    project(paradox-svg Swift)
    add_subdirectory("./api/swift" "./swift_framework")
elseif(LINUX)
    project(paradox-svg C CXX)
    if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
        include("${PROJECT_DIR}/cmake/paradox-platform.cmake")
        if(NOT PARADOX_PLATFORM_FRAMEWORK_BUILD)
            add_subdirectory("${PROJECT_DIR}/modules/Paradox-Platform" "${PROJECT_DIR}/build/paradox-platform")
        endif()
        if(NOT PARADOX_SVG_C_FRAMEWORK_BUILD)
            add_subdirectory("./api/c" "./c_framework")
        endif()
        if(NOT PARADOX_SVG_CPP_FRAMEWORK_BUILD)
            add_subdirectory("./api/cpp" "./cpp_framework")
        endif()
    else()
        message(FATAL_ERROR "Must use GNU GCC/G++ Compiler on Linux")
    endif()
elseif(WIN32)
    project(paradox-svg C CXX)
    if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
        include("${PROJECT_DIR}/cmake/paradox-platform.cmake")
        if(NOT PARADOX_PLATFORM_FRAMEWORK_BUILD)
            add_subdirectory("${PROJECT_DIR}/modules/Paradox-Platform" "${PROJECT_DIR}/build/paradox-platform")
        endif()
        if(NOT PARADOX_SVG_C_FRAMEWORK_BUILD)
            add_subdirectory("./api/c" "./c_framework")
        endif()
        if(NOT PARADOX_SVG_CPP_FRAMEWORK_BUILD)
            add_subdirectory("./api/cpp" "./cpp_framework")
        endif()
    else()
        message(FATAL_ERROR "Must use Visual Studio C/C++ Compiler on Windows")
    endif()
endif()

if(PARADOX_SVG_BUILD_TESTS)
    if(APPLE)
        add_subdirectory("./tests/swift" "./swift_unit_testing")
    elseif(LINUX)
        if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            add_subdirectory("./tests/c" "./c_unit_testing")
            add_subdirectory("./tests/cpp" "./cpp_unit_testing")
        endif()
    elseif(WIN32)
        if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
            add_subdirectory("./tests/c" "./c_unit_testing")
            add_subdirectory("./tests/cpp" "./cpp_unit_testing")
        endif()
    endif()
endif()